src/styles/styles.css
/* ... */
.filter-checkbox {
    display:flex;
    flex-direction:row;
    align-items:center;
    gap:5px;
    cursor: pointer;
}
.filter-checkbox span {
    white-space: nowrap;
    font-size:12px;
}
.filter-checkbox input {
    max-width:16px;
    height:16px;
    margin:0;
    margin-right:20px;
}

/** Mini Editor */
.mini-editor-block {
    display: flex; align-items: center; justify-content: center;
    position: fixed; top:0; left:0; right:0; bottom:0; z-index: 100;
    background-color: rgba(0,0,0,0.5); backdrop-filter: blur(5px);
}
.mini-editor-backdrop { position: absolute; top:0; left:0; right:0; bottom:0; }
.mini-editor-container { 
    position: relative; z-index: 10; width: 80%; max-width: 600px;
    padding: 1.5rem; background-color: var(--bg-secondary); border-radius: 1rem;
    color: var(--text-main);
}
.mini-editor-container input { 
    border-radius: 999rem; padding: 0.5rem 0; background-color: var(--extra-info-bg);
    font-size: 0.8rem; font-weight: bold;
}
.mini-editor-container button { font-family: var(--title-font-family); margin-top: 0.7rem; }

.input-label { display: flex; flex-direction: column; }
.input-label label { font-family: var(--title-font-family); color:var(--extra-info-bg); }
.input-label.white label { color:var(--text-main); }
.input-label.white input { background-color:var(--text-main); }

/* COMMON STYLES TEMPLATES  */
.row-between {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.gap-1 { gap: 0.25rem; }
.w-full { width: 100%; }
.flex-row { display: flex; }
.items-center { align-items: center; }
.justify-between { justify-content: space-between; }
.justify-center { justify-content: center; }

.show-mobile { display: none; }
@media (max-width:767px) {
    body {
        height: 100%;
        position: fixed; top:0; left:0; right:0; bottom:0;
        overflow-y: auto;
    }
    header {
        position: fixed; z-index: 10;
        bottom:0; left:0; right:0;
    }
    page,
    .page {
        flex-grow: 1;
        min-height: auto;
    }
    site-menu {
        flex-direction: row;
        min-height: auto;
        max-height: auto;
        justify-content: space-between;
    }
    site-menu .logo-title { position: fixed; top:0; left:0; }
    site-menu nav { flex-grow: 1; border-top: none; }
    site-menu ul {
        flex-direction: row; margin: 0.5rem 0;
        width: 100%; justify-content: space-around;
    }
    site-main-page,
    site-assessment { width: 90%; }
    .show-mobile { display: inherit; }
    site-top-additionals { top: 0.5rem; }
    site-top-additionals:focus, site-top-additionals:hover { z-index: 50; }
    /* .top_additionals_block .row-icon  */
    .top_additionals_block:hover { transform: scale(1.4) translate(-30px, 10%); }
    .top_additionals_block .top_additionals { display: none; }
    .top_additionals_block:focus .top_additionals,
    .top_additionals_block:hover .top_additionals { display: flex; }
}
@media (max-width:414px) {
    .top_additionals_block:hover { transform: scale(1.4) translate(-30px, 50px); }
}


/** Word-List styles **/
words-list {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}
words-list .top-title-row {
    color: var(--text-main);
    font-family: var(--title-font-family);
    gap: 1rem;
}
.word-list-block {
    max-height: fit-content;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    padding-top: 0.35rem;
}
.words-column {
    max-height: fit-content;
    min-height: 200px;
    overflow-y: auto;
    scrollbar-width: thin;
    scrollbar-color: #fff transparent;
}

.filters-block {
    display:flex; flex-direction:row; align-items:center; justify-content:end; gap:15px; margin:-5px 0px 5px;
    color: var(--text-main);
    font-family: var(--title-font-family);
}
@media (max-width: 767px) {
    .filters-block { justify-content: space-between; }
}
.words-column {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.string-row {
    position: relative;
    color: var(--text-main);
    font-size: 0.75rem;
    display: flex; align-items: center;
}
.string-row::before {
    content: '';
    display: flex;
    width: 10px; height: 10px;
    border-radius: 100%;
}
.string-row.evaluation_none::before { background-color: #999; }
.string-row.evaluation_0::before { background-color: var(--assessment-color-verybad); }
.string-row.evaluation_1::before { background-color: var(--assessment-color-bad); }
.string-row.evaluation_2::before { background-color: var(--assessment-color-medium); }
.string-row.evaluation_3::before { background-color: var(--assessment-color-better); }
.string-row.evaluation_4::before { background-color: var(--assessment-color-good); }
.string-row .lang,
.string-row .translate {
    transition: 0.3s;
    padding: 5px 15px;
}
.string-row .lang { cursor:pointer;}
.string-row .translate {
    position: absolute;
    display: none;
    transform: translateX(0);
    background-color: var(--extra-info-bg);
    z-index: 11;
    border-radius: 999rem;
    overflow: hidden;
    font-weight:bold; font-size: 12px;
}
.string-row .translate span { color: transparent; }
.string-row .translate input,
.string-row .translate input:focus {
    border:none;
    outline:none;
}
.string-row .translate input {
    position:absolute;
    top:5px;
    left:5px;
    z-index:1;
    padding: 0;;
    background-color:transparent;
    font-weight:bold; font-size: 12px;
    width:100%;
}
.string-row:hover .translate { display: block; }
.string-row:hover .lang {
    position: relative;
    z-index: 10;
    background-color: #eee;
    border-radius: 999rem;
    color:#000;
    box-shadow: 0 0 10px rgba(0,0,0,0.3);
}

